# gcp-data-platform-cicd

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/services/: awesome_api_service.py
app/tests/: test_main.py
docs/: architeture.md
terraform/: artifact_registry.tf  cloud_run.tf  iam.tf  main.tf  outputs.tf  secret_manager.tf  variables.tf  wif.tf
